--- a/assets/css/module.css
+++ b/assets/css/module.css
@@ -2,7 +2,7 @@
     background-color: #222222;
     background-size: cover;
     width: 750px;
-    height: 500px;
+    height: 400px;
     display: grid;
     margin-right: auto;
     margin-left: auto;
@@ -21,10 +21,11 @@
     background-image: url("../images/tvbackground.jpg");
     background-size: cover;
     width: 900px;
-    height: 600px;
+    height: 500px;
     display: block;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 20px;
     padding: 15px;
     border-radius: 20px;
 }
